--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,9 @@
 	<title>Template</title>
 </head>
 <body>
-
-	<script type="text/javascript" src="js/app.js"></script>
+    <!-- build:js -->
+    <script src="js/app.js"></script>
+	<script src="js/header.js"></script>
+    <!-- endbuild -->
 </body>
 </html>
